# FinRecall

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  reduction-unlock-risk-case-study.md
src/finrecall/: __init__.py  api.py  benchmark.py  cli.py  content_enrichment.py  extract.py  hybrid.py  keyless_search.py  llm_rerank.py  models.py  native_finance.py  providers.py  storage.py  topics.py  trace_eval.py  trace_training.py  utils.py
tests/: test_content_enrichment.py  test_dates_topics.py  test_docs.py  test_hybrid_keyless_provider.py  test_keyless_search.py  test_llm_rerank.py  test_native_finance_provider.py  test_providers_cli_bench.py  test_public_contract.py  test_storage_api.py  test_trace_eval.py  test_trace_training.py
