[project]
name = "finrecall"
version = "0.1.0"
description = "Open-source finance research search and recall engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [
    { name = "JY0284" },
]
keywords = [
    "finance",
    "search",
    "research",
    "sqlite",
    "fts5",
    "a-share",
]
dependencies = [
    "dateparser>=1.2.0",
    "htmldate>=1.9.0",
    "trafilatura>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/JY0284/FinRecall"
Repository = "https://github.com/JY0284/FinRecall"
Issues = "https://github.com/JY0284/FinRecall/issues"

[project.scripts]
finrecall = "finrecall.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finrecall"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "benchmark: synthetic performance and storage growth checks",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-benchmark>=5.0.0",
    "ruff>=0.11.0",
]
